# poodle

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  VERSION  go.mod  go.sum  main.go  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-generate.yml  release.yml
clients/python-async-full/: README.md  pyproject.toml  requirements.txt
clients/python-async-full/.openapi-generator/: FILES
clients/python-async-full/poodle_async_full/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
clients/python-async-full/poodle_async_full/api/: __init__.py
clients/python-async-full/poodle_async_full/models/: __init__.py  aiplacement_courseassist_explain_text_response.py  aiplacement_courseassist_summarise_text_response.py  aiplacement_editor_generate_image_response.py  aiplacement_editor_generate_text_response.py  auth_email_get_signup_settings_response.py  auth_email_get_signup_settings_response_profilefields_inner.py  auth_email_get_signup_settings_response_warnings_inner.py  auth_email_signup_user_parameters.py  auth_email_signup_user_parameters_customprofilefields_inner.py  auth_email_signup_user_response.py  block_accessreview_get_module_data_response_inner.py  block_accessreview_get_section_data_response_inner.py  block_recentlyaccesseditems_get_recent_items_response_inner.py  (+1133 more)
clients/python-async-mini/: README.md  pyproject.toml
clients/python-async-mini/.openapi-generator/: FILES
clients/python-async-mini/poodle_async_mini/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
cmd/: convert.go  extract.go  generate.go  root.go  template.go
contrib/python/: generate-full.sh  generate-mini.sh  generate.sh  openapi-generator-ignore  template.patch  whitelist.txt
examples/: playground.py  tu-berlin.py
internal/: convert.go  extract.go  generate.go  template.go
internal/util/: files.go  methods.go  moodle.go  process.go  util.go
poodle/: __init__.py  auth.py  corews.py  credentials.py  poodle.py
poodle/typedefs/: __init__.py  assign.py  course.py  courses.py  exception.py  grades.py  methods.py  site.py  ws.py
poodle/types/: __init__.py  assign.py  course.py  exception.py  jsonable.py  site.py  ws.py
poodle/util/: __init__.py  cache.py  loggable.py  parse_form.py  tokens.py
src/poodle/: __init__.py  constants.py  corews.py  poodle.py
src/poodle/types/: courses.py  exception.py  groups.py  jsonable.py  site.py  tag.py  ws.py
src/poodle/util/: cache.py  json.py  logging.py  parse_form.py  tokens.py  url_protocol.py  win_registry.py
(+57 files in other folders)
